--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -35,7 +35,13 @@
             </div>
         </div>
     </nav>
-    <span class="api-info-footer">
-        <span>@AppState.Settings.ApiBaseUrl</span>
-    </span>
+    <div class="nav-footer">
+        <div class="form-check mb-2">
+            <TelerikCheckBox Id="color-switcher"
+                             Value="@AppState.UseOriginalColors"
+                             ValueChanged="@((bool val) => AppState.SetUseOriginalColors(val))" />
+            <label class="form-check-label" for="color-switcher">Use original colors</label>
+        </div>
+        <span class="api-info">@AppState.Settings.ApiBaseUrl</span>
+    </div>
 </div>
