fix changelogs and Description items Timeline

--- a/BlazorTool.Client/Components/SchedulerItem.razor
+++ b/BlazorTool.Client/Components/SchedulerItem.razor
@@ -13,7 +13,7 @@
     {
         <div class="scheduler-item-month">
             <span class="item-asset">[@Item.AppointmentId] @Item.AssetNo</span>
-            <span class="item-assignee">=> @Item.DepName: @Item.AssignedPerson</span>
+            <span class="item-assignee">=> @Item.DepName: @Item.Description</span>
         </div>
     }
     else // Week or Day view
